[package]
name = "calculator"
version = "0.1.0"
edition = "2021"
authors = ["Celeste <72325712+Imnotsure2@users.noreply.github.com>"]
description = "A simple calculator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }

